updated collate_fn with proper indexing

--- a/Jupyter_Notebooks/LOCAL Printed Tex documentation.ipynb
+++ b/Jupyter_Notebooks/LOCAL Printed Tex documentation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "25ef342f",
+   "id": "8cd8b08f",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3c13cea0",
+   "id": "5fbf88b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "17e27ade",
+   "id": "74d9d8d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "84ff6a4e",
+   "id": "75cc8446",
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0c6062d5",
+   "id": "3b23ab77",
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2eef0ca2",
+   "id": "3f45dea0",
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "714328f6",
+   "id": "013eb00e",
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e0c648b8",
+   "id": "5640e767",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "f78d615e",
+   "id": "da6fb2df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "ef74c190",
+   "id": "db676140",
    "metadata": {
     "scrolled": false
    },
@@ -945,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "735b9ceb",
+   "id": "06c4af4f",
    "metadata": {},
    "outputs": [
     {
@@ -970,29 +970,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "74c13d64",
+   "execution_count": 79,
+   "id": "6a161035",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8"
+       "torch.Tensor"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(batch1[0])"
+    "type(torch.stack(batch1[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "72bfb6da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([8, 130])"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.stack(batch1[1]).shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "a93a6a44",
+   "id": "1363f329",
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1036,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "66cc4ba3",
+   "id": "9faf1291",
    "metadata": {},
    "outputs": [
     {
@@ -1115,7 +1136,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "501f2986",
+   "id": "555a4f2a",
    "metadata": {},
    "outputs": [
     {
@@ -1261,7 +1282,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "f119a5ba",
+   "id": "0ab4c0a9",
    "metadata": {},
    "outputs": [
     {
@@ -1284,7 +1305,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "7c340b13",
+   "id": "36f5e9de",
    "metadata": {},
    "outputs": [
     {
@@ -1308,7 +1329,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a872a78b",
+   "id": "3eb9fbff",
    "metadata": {},
    "outputs": [
     {
@@ -1338,7 +1359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a38e187f",
+   "id": "0990cc61",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1346,7 +1367,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0295b7fa",
+   "id": "4a2d485f",
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "efa8de4c",
+   "id": "92375ec8",
    "metadata": {},
    "outputs": [
     {
@@ -1436,7 +1457,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8baa3424",
+   "id": "c346fadf",
    "metadata": {},
    "outputs": [
     {
@@ -1480,7 +1501,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3c39bb77",
+   "id": "c3ae85db",
    "metadata": {},
    "outputs": [
     {
@@ -1523,7 +1544,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "817bbacc",
+   "id": "95855070",
    "metadata": {},
    "outputs": [
     {
@@ -1566,7 +1587,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9763c84b",
+   "id": "84cb1d18",
    "metadata": {},
    "outputs": [
     {
@@ -1638,7 +1659,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ad0fa2d8",
+   "id": "3d8ded19",
    "metadata": {},
    "outputs": [
     {
@@ -1698,7 +1719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cce4c9f",
+   "id": "3f1ae0f3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1706,7 +1727,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1f2c922",
+   "id": "46ac7fb4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1714,7 +1735,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3950362c",
+   "id": "d9f39c0b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1722,7 +1743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "386c241d",
+   "id": "51ff558b",
    "metadata": {},
    "outputs": [],
    "source": []
