updated collate_fn with proper indexing

--- a/Jupyter_Notebooks/LOCAL Printed Tex documentation.ipynb
+++ b/Jupyter_Notebooks/LOCAL Printed Tex documentation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8cd8b08f",
+   "id": "816046b2",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5fbf88b8",
+   "id": "fcc898ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,8 +51,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "74d9d8d0",
+   "execution_count": 94,
+   "id": "bcd2535f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "75cc8446",
+   "id": "5dae63cc",
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3b23ab77",
+   "id": "1fd4fcec",
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3f45dea0",
+   "id": "4d4bcea5",
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "013eb00e",
+   "id": "a65dd69a",
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5640e767",
+   "id": "7da903ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,8 +875,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "da6fb2df",
+   "execution_count": 87,
+   "id": "6c44df8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,37 +887,29 @@
     "\n",
     "def collate_fn(batch):\n",
     "    # Get the maximum height of images in the batch\n",
-    "    max_height = max([item[0].size(1) for item in batch])\n",
-    "    print('max heoght',max_height)\n",
+    "    max_height = max([item.size(1) for item in batch[0]])\n",
+    "    print(batch[0].shape)\n",
     "\n",
     "    # Pad images to the maximum height using zero-padding\n",
-    "    padded_batch = []\n",
-    "    for item in batch:\n",
-    "        image = item[0]\n",
-    "        label = item[1]\n",
+    "    padded_images = []\n",
+    "    labels = batch[1]\n",
+    "    for image in batch[0]:\n",
+    "\n",
     "        padding_height = max_height - image.size(1)\n",
-    "        padding = transforms.Pad((0, padding_height, 0, 0), fill=0)\n",
+    "        padding = transforms.Pad((0, padding_height, 0), fill=0)\n",
     "        padded_image = padding(image)\n",
     "        padded_batch.append((padded_image, label))\n",
     "\n",
     "    # Stack the padded images and labels into a batch tensor\n",
-    "    images = torch.stack([item[0] for item in padded_batch])\n",
-    "    labels = [item[1] for item in padded_batch]\n",
-    "    return images, labels\n",
-    "\n",
-    "dataloader = DataLoader(\n",
-    "            data.data_train,\n",
-    "            shuffle=True,\n",
-    "            batch_size=8,\n",
-    "            num_workers=0,\n",
-    "            collate_fn=collate_fn\n",
-    "        )"
+    "    images = torch.stack(padded_images)\n",
+    "    labels =torch.stack(labels)\n",
+    "    return images, labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "db676140",
+   "execution_count": 95,
+   "id": "eedb8123",
    "metadata": {
     "scrolled": false
    },
@@ -926,8 +918,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "max heoght 172\n",
-      "max heoght 96\n"
+      "max heoght 128\n",
+      "max heoght 180\n"
      ]
     }
    ],
@@ -944,22 +936,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "06c4af4f",
+   "execution_count": 97,
+   "id": "2d840256",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1, 172, 400])\n",
-      "torch.Size([1, 172, 400])\n",
-      "torch.Size([1, 172, 400])\n",
-      "torch.Size([1, 172, 400])\n",
-      "torch.Size([1, 172, 400])\n",
-      "torch.Size([1, 172, 400])\n",
-      "torch.Size([1, 172, 400])\n",
-      "torch.Size([1, 172, 400])\n"
+      "torch.Size([1, 128, 400])\n",
+      "torch.Size([1, 128, 400])\n",
+      "torch.Size([1, 128, 400])\n",
+      "torch.Size([1, 128, 400])\n",
+      "torch.Size([1, 128, 400])\n",
+      "torch.Size([1, 128, 400])\n",
+      "torch.Size([1, 128, 400])\n",
+      "torch.Size([1, 128, 400])\n"
      ]
     }
    ],
@@ -970,8 +962,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "6a161035",
+   "execution_count": 90,
+   "id": "3672faa5",
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +972,7 @@
        "torch.Tensor"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -991,29 +983,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "72bfb6da",
+   "execution_count": 93,
+   "id": "e32cb391",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([8, 130])"
+       "torch.Size([8, 1, 180, 400])"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "torch.stack(batch1[1]).shape"
+    "batch1[0].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "1363f329",
+   "execution_count": 96,
+   "id": "2e7ada76",
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1015,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [71]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m image, label \u001b[38;5;129;01min\u001b[39;00m batch1:\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(image\u001b[38;5;241m.\u001b[39mshape, label\u001b[38;5;241m.\u001b[39mshape)\n",
+      "Input \u001b[0;32mIn [96]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m image, label \u001b[38;5;129;01min\u001b[39;00m batch1:\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(image\u001b[38;5;241m.\u001b[39mshape, label\u001b[38;5;241m.\u001b[39mshape)\n",
       "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
      ]
     }
@@ -1036,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "9faf1291",
+   "id": "8531f642",
    "metadata": {},
    "outputs": [
     {
@@ -1136,7 +1128,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "555a4f2a",
+   "id": "d84612b4",
    "metadata": {},
    "outputs": [
     {
@@ -1282,7 +1274,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "0ab4c0a9",
+   "id": "d0217c5d",
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1297,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "36f5e9de",
+   "id": "5e41e388",
    "metadata": {},
    "outputs": [
     {
@@ -1329,7 +1321,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3eb9fbff",
+   "id": "b0e0e352",
    "metadata": {},
    "outputs": [
     {
@@ -1359,7 +1351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0990cc61",
+   "id": "4d6e4ce6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1367,7 +1359,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4a2d485f",
+   "id": "7ed8e4e2",
    "metadata": {},
    "outputs": [
     {
@@ -1414,7 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "92375ec8",
+   "id": "d792ea43",
    "metadata": {},
    "outputs": [
     {
@@ -1457,7 +1449,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c346fadf",
+   "id": "0821bf87",
    "metadata": {},
    "outputs": [
     {
@@ -1501,7 +1493,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c3ae85db",
+   "id": "3a1440ca",
    "metadata": {},
    "outputs": [
     {
@@ -1544,7 +1536,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "95855070",
+   "id": "e797b618",
    "metadata": {},
    "outputs": [
     {
@@ -1587,7 +1579,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "84cb1d18",
+   "id": "131a7073",
    "metadata": {},
    "outputs": [
     {
@@ -1659,7 +1651,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "3d8ded19",
+   "id": "372531f3",
    "metadata": {},
    "outputs": [
     {
@@ -1719,7 +1711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f1ae0f3",
+   "id": "af4c6150",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1727,7 +1719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46ac7fb4",
+   "id": "51281d4f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1735,7 +1727,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9f39c0b",
+   "id": "742a5ab5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1743,7 +1735,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51ff558b",
+   "id": "41f2b273",
    "metadata": {},
    "outputs": [],
    "source": []
