updated collate_fn with proper indexing

--- a/Jupyter_Notebooks/LOCAL Printed Tex documentation.ipynb
+++ b/Jupyter_Notebooks/LOCAL Printed Tex documentation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a2c25e0d",
+   "id": "8df413dc",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1fb8be97",
+   "id": "2d1acae5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4620261f",
+   "id": "2e35bad3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2cef1c8f",
+   "id": "5490f71f",
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9732f780",
+   "id": "69d7cc31",
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "aee729b7",
+   "id": "ecdf261c",
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4f3a35ad",
+   "id": "d760ffeb",
    "metadata": {},
    "outputs": [
     {
@@ -832,6 +832,7 @@
       "text/plain": [
        "Compose([\n",
        "  LongestMaxSize(always_apply=True, p=1, max_size=400, interpolation=2),\n",
+       "  PadIfNeeded(always_apply=True, p=1.0, min_height=350, min_width=400, pad_height_divisor=None, pad_width_divisor=None, border_mode=0, value=0, mask_value=None),\n",
        "  ShiftScaleRotate(always_apply=False, p=1, shift_limit_x=(0, 0), shift_limit_y=(0, 0), scale_limit=(-0.15000000000000002, 0.0), rotate_limit=(-1, 1), interpolation=3, border_mode=0, value=[0, 0, 0], mask_value=None, rotate_method='largest_box'),\n",
        "  Affine(always_apply=False, p=0.5, interpolation=1, mask_interpolation=0, cval=0, mode=0, scale={'x': (0.6, 1.0), 'y': (0.6, 1.0)}, translate_percent=None, translate_px={'x': (0, 0), 'y': (0, 0)}, rotate=(-2, 2), fit_output=False, shear={'x': (0.0, 0.0), 'y': (0.0, 0.0)}, cval_mask=0, keep_ratio=False),\n",
        "  GridDistortion(always_apply=False, p=0.15, num_steps=5, distort_limit=(-0.1, 0.1), interpolation=3, border_mode=0, value=[0, 0, 0], mask_value=None, normalized=False),\n",
@@ -856,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6a02752b",
+   "id": "9fc63e4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1cf8e549",
+   "id": "501acb20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,7 +910,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e4bf455f",
+   "id": "e4df252f",
    "metadata": {
     "scrolled": false
    },
@@ -930,15 +931,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "6ca0a914",
+   "execution_count": 11,
+   "id": "0cfbd63e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1, 61, 400])\n",
+      "torch.Size([1, 350, 400])\n",
       "torch.Size([130])\n"
      ]
     }
@@ -951,7 +952,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f598422",
+   "id": "1e01d26d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4c4afaa",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -959,223 +968,17 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2a7bbc1d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "out = torch.stack(tensors)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "296023fe",
+   "id": "3defe0cb",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "torch.Size([8, 1, 61, 400])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "out.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "4fad0687",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "list"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(batch1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "57388aa7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x, y = batch1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "9e8f229b",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1871127372.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [16]\u001b[0;36m\u001b[0m\n\u001b[0;31m    max(image.shape[1 for image in x)\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 350, 400])\n"
      ]
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a0e9cf6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for image in batch1[0]:\n",
-    "    print(image.shape[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0fc042f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "batch1[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a5587cf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for image, label in batch1:\n",
-    "    print(image, label)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f07fb9a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20430d5a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(torch.stack(batch1[1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "956695c6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "batch1[0].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e541cf10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for image, label in batch1:\n",
-    "    print(image.shape, label.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f16998c1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "batch1[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b9f4da82",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for item in batch1:\n",
-    "    print(item)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea218b82",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "max([item[0].size(1) for item in batch1[0]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "928df931",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "item = batch2[0][7]\n",
-    "\n",
-    "transform = transforms.ToPILImage()\n",
-    "display(transform(item ))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18f03374",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "transform = transforms.ToPILImage()\n",
-    "display(transform(data.data_train[44][0]))\n",
-    "print(data.data_train[44][0].shape)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d0431c2b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ba94f18",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import cv2\n",
     "import PIL\n",
@@ -1189,15 +992,35 @@
     "\n",
     "my_image_tensor = data.image_transform_test(image=np.array(my_image))['image'][:1]\n",
     "print(my_image_tensor.shape)\n",
-    "print(display(transform(my_image_tensor)))\n"
+    "#print(display(transform(my_image_tensor)))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2d0a28da",
+   "execution_count": 14,
+   "id": "2a6f131d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 350, 400])\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'transform' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [14]\u001b[0m, in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m my_image_tensor \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mimage_transform_test(image\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39marray(my_image))[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mimage\u001b[39m\u001b[38;5;124m'\u001b[39m][:\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(my_image_tensor\u001b[38;5;241m.\u001b[39mshape)\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28mprint\u001b[39m(display(\u001b[43mtransform\u001b[49m(my_image_tensor)))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'transform' is not defined"
+     ]
+    }
+   ],
    "source": [
     "my_image_path= \"Jupyter_Notebooks/test_photos/screenshot_1.png\"\n",
     "my_image = cv2.imread(my_image_path)\n",
@@ -1212,10 +1035,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "54992a88",
+   "execution_count": 15,
+   "id": "62f86e34",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 350, 400])\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'transform' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [15]\u001b[0m, in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m my_image_tensor \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mimage_transform_test(image\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39marray(my_image))[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mimage\u001b[39m\u001b[38;5;124m'\u001b[39m][:\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(my_image_tensor\u001b[38;5;241m.\u001b[39mshape)\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28mprint\u001b[39m(display(\u001b[43mtransform\u001b[49m(my_image_tensor)))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'transform' is not defined"
+     ]
+    }
+   ],
    "source": [
     "my_image_path= \"Jupyter_Notebooks/test_photos/Screen Shot_14.png\"\n",
     "my_image = cv2.imread(my_image_path)\n",
@@ -1231,10 +1073,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "676b9816",
+   "execution_count": 16,
+   "id": "0c726f99",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 350, 400])\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'transform' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [16]\u001b[0m, in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m my_image_tensor \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mimage_transform_test(image\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39marray(my_image))[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mimage\u001b[39m\u001b[38;5;124m'\u001b[39m][:\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(my_image_tensor\u001b[38;5;241m.\u001b[39mshape)\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28mprint\u001b[39m(display(\u001b[43mtransform\u001b[49m(my_image_tensor)))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'transform' is not defined"
+     ]
+    }
+   ],
    "source": [
     "my_image_path= \"Jupyter_Notebooks/test_photos/Screen Shot_10.png\"\n",
     "my_image = cv2.imread(my_image_path)\n",
@@ -1249,10 +1110,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "da346e99",
+   "execution_count": 17,
+   "id": "2fca3e7c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 350, 400])\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'transform' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [17]\u001b[0m, in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m my_image_tensor \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mimage_transform_test(image\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39marray(my_image))[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mimage\u001b[39m\u001b[38;5;124m'\u001b[39m][:\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(my_image_tensor\u001b[38;5;241m.\u001b[39mshape)\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28mprint\u001b[39m(display(\u001b[43mtransform\u001b[49m(my_image_tensor)))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'transform' is not defined"
+     ]
+    }
+   ],
    "source": [
     "my_image_path= \"Jupyter_Notebooks/test_photos/Screen Shot_11.png\"\n",
     "my_image = cv2.imread(my_image_path)\n",
@@ -1267,10 +1147,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9786a6ff",
+   "execution_count": 18,
+   "id": "e137faa2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 350, 400])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/gregory/opt/anaconda3/lib/python3.9/site-packages/albumentations/augmentations/transforms.py:1414: UserWarning: The image is already gray.\n",
+      "  warnings.warn(\"The image is already gray.\")\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'transform' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [18]\u001b[0m, in \u001b[0;36m<cell line: 12>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m my_image_tensor \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mimage_transform_test(image\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39marray(my_image))[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mimage\u001b[39m\u001b[38;5;124m'\u001b[39m][:\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(my_image_tensor\u001b[38;5;241m.\u001b[39mshape)\n\u001b[0;32m---> 12\u001b[0m \u001b[38;5;28mprint\u001b[39m(display(\u001b[43mtransform\u001b[49m(my_image_tensor)))\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(display(my_image))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'transform' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import PIL\n",
@@ -1289,10 +1196,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5147d76e",
+   "execution_count": 19,
+   "id": "11b2b020",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(658, 152)\n",
+      "torch.Size([1, 350, 400])\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'transform' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [19]\u001b[0m, in \u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m my_image_tensor \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mimage_transform_test(image\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39marray(my_image))[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mimage\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(my_image_tensor\u001b[38;5;241m.\u001b[39mshape)\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28mprint\u001b[39m(display(\u001b[43mtransform\u001b[49m(my_image_tensor)))\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(display(my_image))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'transform' is not defined"
+     ]
+    }
+   ],
    "source": [
     "my_image_path= \"Jupyter_Notebooks/test_photos/screenshot_1.png\"\n",
     "my_image = Image.open(my_image_path).convert(\"L\") \n",
@@ -1307,7 +1234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c211670",
+   "id": "e8b99e7b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1315,7 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "826aa2fe",
+   "id": "f32e11ab",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1323,7 +1250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d882110b",
+   "id": "a19d41d1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1331,7 +1258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98fa4e86",
+   "id": "2e823862",
    "metadata": {},
    "outputs": [],
    "source": []
