--- a/Jupyter_Notebooks/LOCAL INFERENCE WHITE.ipynb
+++ b/Jupyter_Notebooks/LOCAL INFERENCE WHITE.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "554734d0",
+   "id": "b9b186a6",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ce273ed8",
+   "id": "a4b317a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dfe74b5c",
+   "id": "41df9ceb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f758f3a1",
+   "id": "72ed0f4a",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5d922167",
+   "id": "530f40d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,14 +145,14 @@
     "    bottom = positions[0].max()\n",
     "    left = positions[1].min()\n",
     "    right = positions[1].max()\n",
-    "    image = cv2.rectangle(image, (left-2, top-2), (right+2, bottom+2), (0, 0, 0), 0)\n",
+    "    image = cv2.rectangle(image, (left-3, top-3), (right+3, bottom+3), (0, 0, 0), 0)\n",
     "    return image\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cd163e68",
+   "id": "58c88ab5",
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a607ab3e",
+   "id": "acdc7912",
    "metadata": {},
    "outputs": [
     {
@@ -235,13 +235,7 @@
     "image = Image.open(image_path).convert('RGB')\n",
     "image = np.asarray(image)\n",
     "\n",
-    "positions = np.nonzero(image)\n",
-    "top = positions[0].min()\n",
-    "bottom = positions[0].max()\n",
-    "left = positions[1].min()\n",
-    "right = positions[1].max()\n",
-    "image = cv2.rectangle(image, (left - 2, top - 2), (right + 2, bottom + 2), (0, 0, 0), 0)\n",
-    "\n",
+    "findPositions(image)\n",
     "h, w, c = image.shape\n",
     "ratio =(w / h)\n",
     "if ratio == 0:\n",
@@ -273,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "91da4d34",
+   "id": "177404dd",
    "metadata": {},
    "outputs": [
     {
@@ -328,13 +322,7 @@
     "image = Image.open(image_path).convert('RGB')\n",
     "image = np.asarray(image)\n",
     "\n",
-    "positions = np.nonzero(image)\n",
-    "top = positions[0].min()\n",
-    "bottom = positions[0].max()\n",
-    "left = positions[1].min()\n",
-    "right = positions[1].max()\n",
-    "image = cv2.rectangle(image, (left - 2, top - 2), (right + 2, bottom + 2), (0, 0, 0), 0)\n",
-    "\n",
+    "findPositions(image)\n",
     "h, w, c = image.shape\n",
     "ratio =(w / h)\n",
     "if ratio == 0:\n",
@@ -366,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "56f2847e",
+   "id": "fddbe08f",
    "metadata": {},
    "outputs": [
     {
@@ -421,13 +409,7 @@
     "image = Image.open(image_path).convert('RGB')\n",
     "image = np.asarray(image)\n",
     "\n",
-    "positions = np.nonzero(image)\n",
-    "top = positions[0].min()\n",
-    "bottom = positions[0].max()\n",
-    "left = positions[1].min()\n",
-    "right = positions[1].max()\n",
-    "image = cv2.rectangle(image, (left - 2, top - 2), (right + 2, bottom + 2), (0, 0, 0), 0)\n",
-    "\n",
+    "findPositions(image)\n",
     "h, w, c = image.shape\n",
     "ratio =(w / h)\n",
     "if ratio == 0:\n",
@@ -459,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0a900b9c",
+   "id": "46f5aa60",
    "metadata": {},
    "outputs": [
     {
@@ -514,13 +496,7 @@
     "image = Image.open(image_path).convert('RGB')\n",
     "image = np.asarray(image)\n",
     "\n",
-    "positions = np.nonzero(image)\n",
-    "top = positions[0].min()\n",
-    "bottom = positions[0].max()\n",
-    "left = positions[1].min()\n",
-    "right = positions[1].max()\n",
-    "image = cv2.rectangle(image, (left - 2, top - 2), (right + 2, bottom + 2), (0, 0, 0), 0)\n",
-    "\n",
+    "findPositions(image)\n",
     "h, w, c = image.shape\n",
     "ratio =(w / h)\n",
     "if ratio == 0:\n",
@@ -552,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "13fc8960",
+   "id": "ed62797e",
    "metadata": {},
    "outputs": [
     {
@@ -608,13 +584,7 @@
     "image = Image.open(image_path).convert('RGB')\n",
     "image = np.asarray(image)\n",
     "\n",
-    "positions = np.nonzero(image)\n",
-    "top = positions[0].min()\n",
-    "bottom = positions[0].max()\n",
-    "left = positions[1].min()\n",
-    "right = positions[1].max()\n",
-    "image = cv2.rectangle(image, (left - 2, top - 2), (right + 2, bottom + 2), (0, 0, 0), 0)\n",
-    "\n",
+    "findPositions(image)\n",
     "h, w, c = image.shape\n",
     "ratio =(w / h)\n",
     "if ratio == 0:\n",
@@ -646,7 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "739b426e",
+   "id": "21a679fd",
    "metadata": {},
    "outputs": [
     {
@@ -702,12 +672,8 @@
     "image = Image.open(image_path).convert('RGB')\n",
     "image = np.asarray(image)\n",
     "\n",
-    "positions = np.nonzero(image)\n",
-    "top = positions[0].min()\n",
-    "bottom = positions[0].max()\n",
-    "left = positions[1].min()\n",
-    "right = positions[1].max()\n",
-    "image = cv2.rectangle(image, (left - 2, top - 2), (right + 2, bottom + 2), (0, 0, 0), 0)\n",
+    "findPositions(image)\n",
+    "\n",
     "\n",
     "h, w, c = image.shape\n",
     "ratio =(w / h)\n",
@@ -740,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "86cb6a8a",
+   "id": "fd2a60d5",
    "metadata": {},
    "outputs": [
     {
@@ -795,13 +761,7 @@
     "image = Image.open(image_path).convert('RGB')\n",
     "image = np.asarray(image)\n",
     "\n",
-    "positions = np.nonzero(image)\n",
-    "top = positions[0].min()\n",
-    "bottom = positions[0].max()\n",
-    "left = positions[1].min()\n",
-    "right = positions[1].max()\n",
-    "image = cv2.rectangle(image, (left - 2, top - 2), (right + 2, bottom + 2), (0, 0, 0), 0)\n",
-    "\n",
+    "findPositions(image)\n",
     "h, w, c = image.shape\n",
     "ratio =(w / h)\n",
     "if ratio == 0:\n",
@@ -833,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b7161c1d",
+   "id": "33de7452",
    "metadata": {},
    "outputs": [
     {
@@ -888,13 +848,7 @@
     "image = Image.open(image_path).convert('RGB')\n",
     "image = np.asarray(image)\n",
     "\n",
-    "positions = np.nonzero(image)\n",
-    "top = positions[0].min()\n",
-    "bottom = positions[0].max()\n",
-    "left = positions[1].min()\n",
-    "right = positions[1].max()\n",
-    "image = cv2.rectangle(image, (left - 2, top - 2), (right + 2, bottom + 2), (0, 0, 0), 0)\n",
-    "\n",
+    "findPositions(image)\n",
     "h, w, c = image.shape\n",
     "ratio =(w / h)\n",
     "if ratio == 0:\n",
@@ -926,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "bdb84d93",
+   "id": "a19bc308",
    "metadata": {},
    "outputs": [
     {
@@ -981,13 +935,7 @@
     "image = Image.open(image_path).convert('RGB')\n",
     "image = np.asarray(image)\n",
     "\n",
-    "positions = np.nonzero(image)\n",
-    "top = positions[0].min()\n",
-    "bottom = positions[0].max()\n",
-    "left = positions[1].min()\n",
-    "right = positions[1].max()\n",
-    "image = cv2.rectangle(image, (left - 2, top - 2), (right + 2, bottom + 2), (0, 0, 0), 0)\n",
-    "\n",
+    "findPositions(image)\n",
     "h, w, c = image.shape\n",
     "ratio =(w / h)\n",
     "if ratio == 0:\n",
@@ -1019,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c81329ec",
+   "id": "094bab10",
    "metadata": {},
    "outputs": [
     {
@@ -1074,12 +1022,7 @@
     "image = Image.open(image_path).convert('RGB')\n",
     "image = np.asarray(image)\n",
     "\n",
-    "positions = np.nonzero(image)\n",
-    "top = positions[0].min()\n",
-    "bottom = positions[0].max()\n",
-    "left = positions[1].min()\n",
-    "right = positions[1].max()\n",
-    "image = cv2.rectangle(image, (left - 2, top - 2), (right + 2, bottom + 2), (0, 0, 0), 0)\n",
+    "findPositions(image)\n",
     "\n",
     "h, w, c = image.shape\n",
     "ratio =(w / h)\n",
@@ -1112,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "657696b5",
+   "id": "51f57bae",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1120,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "063d10ab",
+   "id": "f4600d07",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1128,7 +1071,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5fbb23e",
+   "id": "60565506",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1136,7 +1079,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed45eb33",
+   "id": "39e7e89f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1144,7 +1087,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84d35891",
+   "id": "da9a2ca5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1152,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ecb9370",
+   "id": "1d185507",
    "metadata": {},
    "outputs": [],
    "source": []
