updated h to 128 and w to 1920 and image cropping

--- a/Jupyter_Notebooks/LOCAL INFERENCE WHITE.ipynb
+++ b/Jupyter_Notebooks/LOCAL INFERENCE WHITE.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 102,
    "id": "c20fb059",
    "metadata": {},
    "outputs": [
@@ -209,6 +209,7 @@
      "output_type": "stream",
      "text": [
       "None\n",
+      "(57, 288, 3)\n",
       "torch.Size([1, 64, 1600])\n"
      ]
     },
@@ -258,7 +259,7 @@
     "image = np.asarray(image)\n",
     "image = findPositions(image)\n",
     "print(display(transform(image)))\n",
-    "\n",
+    "print(image.shape)\n",
     "\n",
     "\n",
     "h, w, c = image.shape\n",
